--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,9 @@
  body{
   font-family: 'DM Sans',sans-serif ;
  }
+ *{
+  font-family: 'DM Sans',sans-serif
+ }
  .gradient{
   background: linear-gradient(146.36deg, #DFEAF0 8.13%, #D5E4EA 58.07%, #F4E7F4 99.76%);
 }
